# morphy

./: README.md  pyproject.toml  test.txt
morphy/: config.py  main.py
morphy/cmd/: make.py  remove.py  show.py  update.py  util.py
morphy/cmd/model/: bybit.py
