[tool.poetry]
name = "morphy"
version = "0.1.0"
description = ""
authors = ["Shion Noguchi <shion24stat@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
morphy = "morphy.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
pandas = "^2.2.2"
rich = "^13.7.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
